# anyos

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  _work.txt  aarch64-anyos-user.json  aarch64-anyos.json  crash_analysis.md  debug_vbox.sh  debug_vbox_gdb_init.txt  i686-anyos.json  x86_64-anyos-user.json  x86_64-anyos.json
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: build.yml  release.yml
apps/anybench/: Cargo.toml  Info.conf
apps/anybench/src/: main.rs
apps/anybench/src/workloads/: crypto_hash.rs  gl3d_common.rs  gl3d_depth.rs  gl3d_drawcalls.rs  gl3d_lighting.rs  gl3d_textured.rs  gl3d_triangles.rs  gpu_blending.rs  gpu_circles.rs  gpu_fill_rect.rs  gpu_lines.rs  gpu_pixels.rs  mandelbrot.rs  matrix_multiply.rs  memory_copy.rs  mod.rs  prime_sieve.rs  sort.rs
apps/anycode/: Cargo.toml  Info.conf  build.conf
apps/browser/: Info.conf
apps/calc/: Cargo.toml  Info.conf
apps/clipman/: Cargo.toml  Info.conf
apps/clock/: Cargo.toml  Info.conf
apps/demo_anyui/: Cargo.toml  Info.conf
apps/diagnostics/: Cargo.toml  Info.conf
apps/diff/: Cargo.toml  Info.conf
apps/eventviewer/: build.rs
apps/fontviewer/: Cargo.toml  Info.conf
apps/gldemo/: Cargo.toml  Info.conf
apps/iconview/: Cargo.toml  Info.conf
apps/imgview/: Cargo.toml  Info.conf  build.rs
apps/mdview/: Cargo.toml  Info.conf  build.rs
apps/minesweeper/: Cargo.toml  Info.conf
apps/notepad/: Cargo.toml  Info.conf
apps/paint/: Cargo.toml  Info.conf
apps/screenshot/: Cargo.toml  Info.conf
apps/store/: Cargo.toml  Info.conf
apps/surf/: Cargo.toml  Info.conf  anyos_tls.c  build.rs
apps/surf/src/: callbacks.rs  css.rs  deflate.rs  dom.rs  html.rs  http.rs  layout.rs  main.rs  net_worker.rs  paint.rs  resources.rs  style.rs  tab.rs  tls.rs  ui.rs  ws.rs
apps/surf/src/layout/: block.rs  flex.rs  form.rs  inline.rs  mod.rs
apps/videoplayer/: Cargo.toml  Info.conf
apps/vmmanager/: Cargo.toml  Info.conf
apps/vmmanager/src/: main.rs
apps/vnc-settings/: Cargo.toml  Info.conf
apps/webmanager/: Cargo.toml  Info.conf
bootloader/stage1/: boot.asm
bootloader/stage2/: a20.asm  disk.asm  memory_map.asm  protected_mode.asm  stage2.asm  vesa.asm
bootloader/uefi/: Cargo.toml
buildsystem/amake/: bootstrap.sh
buildsystem/anyelf/: Makefile  anyelf
buildsystem/anyld/: Makefile  anyld
buildsystem/apkg-build/: Makefile  apkg-build
buildsystem/apkg-index/: Makefile  apkg-index
buildsystem/mkappbundle/: Makefile
buildsystem/mkimage/: Makefile  mkimage
cmake/: BuildTools.cmake  KernelBoot.cmake  Targets.cmake  Toolchains.cmake  UserPrograms.cmake
config/: provision_users.cmake  users.conf
docs/: ami.md  anyui-api.md  architecture.md  libc-api.md  libcompositor-api.md  libcxx-api.md  libdb-api.md  libfont-api.md  libgl-api.md  libimage-api.md  libjs-api.md  libm-api.md  librender-api.md  libsvg-api.md  libwebview-api.md  libzip-api.md  services.md  stdlib-api.md  syscalls.md  uisys-api.md
include/sys/: syscall.h
kernel/: Cargo.toml  build.rs  link.ld  link_arm64.ld
kernel/asm/: ap_trampoline.asm  boot.asm  context_switch.asm  interrupts.asm  syscall_entry.asm  syscall_fast.asm
kernel/asm_arm64/: ap_startup.S  boot.S  context_switch.S  exceptions.S
kernel/src/: boot_info.rs  main.rs  panic.rs  sched_diag.rs
libs/dynlink/: Cargo.toml
libs/libanyui/: Cargo.toml  exports.def
libs/libanyui_client/: Cargo.toml
libs/libc/: Makefile  link.ld
libs/libc64/: Makefile  link.ld
libs/libcompositor/: Cargo.toml  link.ld
libs/libcompositor_client/: Cargo.toml
libs/libcorevm/: Cargo.toml  exports.def
libs/libcorevm_client/: Cargo.toml
libs/libcxx/: Makefile
libs/libcxxabi/: Makefile
libs/libdb/: Cargo.toml  exports.def
libs/libdb_client/: Cargo.toml
libs/libfont/: Cargo.toml  build.rs  exports.def  link.ld
libs/libfont_client/: Cargo.toml
libs/libgl/: Cargo.toml  build.rs  exports.def
libs/libgl_client/: Cargo.toml
libs/libheap/: Cargo.toml
libs/libhttp/: Cargo.toml  exports.def
libs/libhttp_client/: Cargo.toml
libs/libimage/: Cargo.toml  link.ld
libs/libjs/: Cargo.toml
libs/libjs_tests/: Cargo.toml
libs/libjs_tests/.cargo/: config.toml
libs/libjs_tests/src/: lib.rs
libs/libjs_tests/test262/: .gitignore  README.md
libs/libjs_tests/tests/: 01_primitives.rs  02_operators.rs  03_variables.rs  04_strings.rs  05_arrays.rs  06_objects.rs  07_functions.rs  08_control_flow.rs  09_classes.rs  10_error_handling.rs  11_builtins.rs  12_advanced.rs  99_debug.rs
libs/libm/: Cargo.toml  exports.def
libs/libm_client/: Cargo.toml
programs/: hello.asm
programs/system/audiomon/: Cargo.toml
programs/system/videoplayer/: Cargo.toml
programs/system/videoplayer/src/: main.rs
scripts/: add_copyright.ps1  add_copyright.sh  build.ps1  build.sh  build_bearssl.ps1  build_bearssl.sh  build_bearssl_x64.ps1  build_bearssl_x64.sh  build_cross_compiler.ps1  build_cross_compiler.sh  build_curl.ps1  build_curl.sh  build_dash.ps1  build_dash.sh  build_gcc_toolchain.sh  build_git.ps1  build_git.sh  build_ladybird.sh  build_libgit2.ps1  build_libgit2.sh  build_nasm.ps1  build_nasm.sh  build_ssh.ps1  build_ssh.sh  clean.ps1  clean.sh  convert_vmdk.ps1  convert_vmdk.sh  count_lines.sh  debug-freeze.gdb  debug.ps1  debug.sh  deploy_packages.sh  download_test262.sh  publish_packages.sh  run.ps1  run.sh  setup_toolchain.ps1  setup_toolchain.sh  test.sh
stdlib/: link.ld
system/compositor/dock/: Cargo.toml
system/compositor/dock/src/: config.rs  events.rs  framebuffer.rs  main.rs  render.rs  settings.rs  theme.rs  types.rs
system/inputmon/: Cargo.toml
system/inputmon/src/: main.rs
system/taskmanager/: Cargo.toml  Info.conf
system/taskmanager/src/: data.rs  format.rs  graph.rs  icon_cache.rs  main.rs  types.rs
todos/: architecture-refactoring.md
tools/: __convert_boot_logo.py  __elf2bin.py  __gen_cc_font.py  __gen_font.py  __gen_sample_video.py  __mkiconpack.py  __mkimage.py  convert_boot_logo.py  elf2bin.py  elf2kdrv.py  encode_mjv.py  gen_cc_font.py  gen_font.py  gen_icons.py  mkimage.py  test_svg_raster.py
(+1427 files in other folders)
